# OTP-SynthData

./: .gitignore  GEMINI.md  README.md  app_2.py  core_2.py  gen.txt  requirements.txt  routing.txt  test.py  tp_data_v2.xlsx
archive/: app.py
cli_suite/: main_2.py
cli_suite/tp_gen_cli/: pyproject.toml  requirements.txt
cli_suite/tp_gen_cli/tp_gen/: core.py  main.py
data/: All ISO, Countries, Currency, region.csv  CIT Rate Europe.csv  Cities_with_ISO.csv  Company data.xlsx  OTP_Template.xlsx
write 10 pg assay/: CRISP-DM Report.docx  Documentation of the creative process.docx  Exploration Journey Report.docx  Information Assignment.docx  Synthetic data generation for OTP Demo cases.docx  Video Skript.docx  essay_synthetic_tp_data_project.md
